--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./src/styles.css" />
-    <script src="./src/app.js" defer></script>
+    <script type="module" src="./src/app.js" defer></script>
   </head>
   <body>
     <div id="container"></div>
