--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>KIT10 AI Home</title>
     <link rel="stylesheet" href="./src/styles.css" />
     <script type="module" src="./src/app.js" defer></script>
   </head>
